--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,3 +4,60 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+
+body {
+    height: 100 vh;
+    background-color: white;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-size: 1rem;
+}
+
+a:hover {
+    color:orange;
+}
+
+.toggle-btn {
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+}
+
+header {
+    position: relative;
+    padding: 0 2rem;
+}
+
+.navbar-container {
+    width: 100%;
+    height: 60px;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar-container .logo a {
+    font-size: 1.5 rem;
+    font-weight: bold;
+}
+
+.navbar-container .links {
+    display: flex;
+    gap: 2rem;
+}
+
+.navbar-container .burger-menu {
+    font-size: 1.5 rem;
+    cursor: pointer;
+    display: none;
+}
