--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,11 +24,22 @@ a:hover {
     color:orange;
 }
 
-.toggle-btn {
+.bar1, .bar2, .bar3 {
     width: 35px;
     height: 5px;
     background-color: black;
     margin: 6px 0;
+    transition: 0.3s ease-in-out;
+}
+
+.open .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+}
+
+.open .bar2 {opacity: 0;}
+
+.open .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
 }
 
 header {
@@ -60,4 +71,52 @@ header {
     font-size: 1.5 rem;
     cursor: pointer;
     display: none;
+}
+
+/* drop down menu*/
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    height: 0;
+    width: 300px;
+    background: rgba(000, 000, 000, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown-menu li {
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.dropdown-menu.open {
+    height: 170px;
+    ;
+}
+
+
+/* responsive design*/
+@media(max-width: 750px){
+    .navbar-container .links,
+    .navbar-container .burger-menu {
+        display: block;
+    }
+
+    .dropdown-menu {
+        display: block;
+    }
+}
+
+@media(max-width: 576px){
+    .dropdown-menu {
+        left: 2rem;
+        width: unset;    
+    }
 }
