--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wdth,wght@0,5..1200,87.5..112.5,300..900;1,5..1200,87.5..112.5,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
     height: 100 vh;
-    background-color: white;
+    background-color: #EAE0D5;
+}
+
+
+html {
+    scroll-behavior: smooth;
 }
 
 li {
@@ -16,30 +24,32 @@ li {
 
 a {
     text-decoration: none;
-    color: black;
+    color: #0A0908;
     font-size: 1rem;
+    font-weight: 475;
 }
 
 a:hover {
-    color:orange;
+    color:#534537;
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
 }
 
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
-    transition: 0.3s ease-in-out;
+a, .btn {
+    transition: all 300ms ease;
 }
 
-.open .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
+.logo {
+    font-family: "Playfair", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings:"wdth" 105;
+    font-size: 1.5rem;
 }
 
-.open .bar2 {opacity: 0;}
-
-.open .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
+.logo:hover {
+    cursor: default;
 }
 
 header {
@@ -73,7 +83,27 @@ header {
     display: none;
 }
 
-/* drop down menu*/
+/* BURGER MENU ICON */
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    border-radius: 20px;
+    background-color: black;
+    margin: 6px 0;
+    transition: 0.3s ease-in-out;
+}
+
+.open .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+}
+
+.open .bar2 {opacity: 0;}
+
+.open .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+}
+
+/* DROP DOWN MENU  */
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -101,7 +131,108 @@ header {
 }
 
 
-/* responsive design*/
+/* SECTIONS */
+.section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container {
+    display: flex;
+}
+
+/* SECTION PROFILE */
+#profile {
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.section__text {
+    align-self: center;
+    text-align: center;
+}
+
+.section__text p {
+    font-weight: 500;
+}
+
+.section__text__p1 {
+    font-size: 1.3rem;
+    text-align: center;
+}
+
+.section__text__p2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.title {
+    font-family: "Playfair", serif;
+    font-optical-sizing: auto;
+    font-weight: 550;
+    font-style: normal;
+    font-variation-settings:"wdth" 115;
+    font-size: 3rem;
+    text-align: center;
+    padding: 0.6rem;
+}
+
+#socials-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+/* ICONS */
+.icon {
+    cursor: pointer;
+    height: 3rem;
+    width: auto;
+}
+
+/* BUTTONS */
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+}
+
+.btn-v1 {
+    border:  #22333B 0.1rem solid;
+    background: #22333B;
+    color: white;
+}
+
+.btn-v1:hover {
+    cursor: pointer;
+    color:  #22333B;;
+    background: none;
+}
+
+.action-btns {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
+
+/* RESPONSIVE DESIGN */
 @media(max-width: 750px){
     
     .navbar-container .links {
