--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -390,6 +390,7 @@ section {
     font-weight: 600;
     font-size: 1.5rem;
     margin: 0.25rem;
+    text-align: center;
 }
 
 .progress-bars {
@@ -656,6 +657,119 @@ article .icon {
     background-color: #534537;
 }
 
+/* GOALS SECTION */
+#goals {
+    position: relative;
+}
+
+.goals-container {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2em;
+}
+
+.goals-tech {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    justify-content: space-around;
+    align-items: center;
+    width: 300px;
+    box-shadow: 0 2px 15px 0px #6d5d4c;
+    border-radius: 2rem;
+}
+
+.tech-item {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5em;
+    align-items: center;
+    text-align: center;
+    font-weight: 500;
+    margin: 1em;
+}
+
+.devicon-react-original,
+.devicon-nodejs-plain-wordmark,
+.devicon-express-original,
+.devicon-csharp-plain,
+.devicon-typescript-plain,
+.devicon-docker-plain {
+    font-size: 3em;
+    color: #22333B;
+}
+
+.goals-cert {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    padding: 1em;
+    box-shadow: 0 2px 15px 0px #6d5d4c;
+    border-radius: 2rem;
+}
+
+.cert-list {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5em;
+    gap: 2em;
+    margin-top: 1em;
+    text-align: left;
+}
+
+.cert-list li{
+    font-weight: 600;
+    list-style-type: disc;
+}
+
+.cert-list li ul li{
+    font-weight: 500;
+    list-style-type: none;
+    margin-top: 0.5em;
+}
+
+.goals-projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 1em;    
+    box-shadow: 0 2px 15px 0px #6d5d4c;
+    border-radius: 2rem;
+}
+
+.proj-list {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    gap: 3em;
+    padding: 1em;
+}
+
+.uni-proj,
+.solo-proj {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: left;
+    gap: 1em;
+}
+
+.uni-icon,
+.solo-icon {
+    display: flex;
+    font-weight: 600;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+}
+
+.uni-proj li, 
+.solo-proj li {
+    list-style-type: disc;
+    font-weight: 500;
+    text-align: left;
+}
 
 /* FOOTER SECTION */
 footer {
