--- a/public/stylesheets/project-style.css
+++ b/public/stylesheets/project-style.css
@@ -211,6 +211,31 @@ section {
     margin-top: 0.5rem;
 }
 
+/* EMPATHIZE & DEFINE SECTION */
+#emp-def {
+    position: relative;
+    height: fit-content;
+    margin-bottom: 8em;
+}
+
+.emp-container,
+.def-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.emp-text,
+.def-text {
+    margin: 2em 0;
+}
+
+.emp-container img,
+.def-container img {
+    width: 100%;
+    margin-bottom: 2em;
+    border-radius: 1.5em;
+    height: auto;
+}
 
 /* IDEAS SECTION */
 #ideas {
@@ -218,40 +243,253 @@ section {
     flex-direction: column;
     position: relative;
     height: fit-content;
-}
-
-#ideas h3 {
-    margin-bottom: 2em;
+    margin-bottom: 8em;
 }
 
 
 .ideas-container {
     display: flex;
     flex-direction: column;
-    border: #afa093 0.1rem solid;
-    box-shadow: 0 2px 15px 0px #6d5d4c;
-    border-radius: 1.5rem;
-    position: relative;
 }
 
-.ideas-proc,
-.ideas-wframes {
+.ideas-container img {
+    width: 100%;
+    margin-bottom: 2em;
+    border-radius: 1.5em;
+    height: auto;
+}
+
+.ideas-text-img {
     display: flex;
-    align-items: center;
+    align-items:flex-start;
+    margin-top: 2em;
 }
 
+.ideas-text {
+    width: fit-content;
+    margin-right: 2em;
+}
 
-.ideas-proc img,
-.ideas-wframes img {
+.ideas-text-img  img {
     width: 100%;
     height: auto;
-    border-radius: 1.5rem;
-    padding: 1em;
 }
 
-.ideas-proc-text,
-.ideas-wframes-text {
-    margin: 1em;
-    border: #0A0908 0.1rem solid;
-    flex-basis: 1100px;
+.images-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2em;
+}
+
+.img2-cont {
+    display: flex;
+    gap: 2em;
+    width: 100%;
+    height: auto;
+}
+
+/* SOLUTION SECTION */
+#solution {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: fit-content;
+    margin-bottom: 8em;
+}
+
+.sol-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+    align-items: center;
+    height: fit-content;
+}
+
+.sol-wframes-text {
+    margin: 2em 2em 0 0;
+}
+
+.sol-container img {    
+    width: 100%;
+    border-radius: 1.5em;
+    height: auto;
+}
+
+.mockup-screens {
+    display: flex;
+    height: fit-content;
+    gap: 1em;
+}
+
+.mockup-screens img {
+    height: fit-content;
+    border-radius: 1em;
+}
+
+.mockup-gif {
+    width: auto;
+    height: 100%s;
+}
+
+
+/* LINKS SECTION */
+#link_proj {
+    position: relative;
+    height: fit-content;
+    margin-bottom: 3em;
+}
+
+#link_proj h2 {
+    margin-bottom: 2em;
+}
+
+.link-proj-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    color:#534537;
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin: 0.25rem;
+    width: fit-content;
+}
+
+.link-proj-container li:hover {
+    color: #6d5d4c;
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+    cursor: pointer;
+}
+
+
+/* MOCKUP 2*/
+.mockup2 {
+    position: relative;
+    margin-bottom: 8em;
+}
+
+/* RESPONSIVE DESIGN */
+@media(min-width: 769px) and (max-width: 1024px) {
+    
+    section {
+        height: fit-content;
+        margin: 0 5%;
+    }
+}
+
+@media(min-width: 481px) and (max-width: 768px) {
+    
+    section {
+        height: fit-content;
+        margin: 0 5%;
+    }
+
+    .ideas-text-img {
+        flex-wrap: wrap;
+        gap: 1em;
+    }
+
+    .ideas-wframes {
+        flex-wrap: wrap;
+    }
+
+    .img2-cont {
+        flex-wrap: wrap;
+        gap: 0.5em;
+    }
+
+
+    #link_proj {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .link-proj-container li {
+        font-size: large;
+    }
+
+    
+    #link_proj h2 {
+        font-size: 15pt;
+        margin-bottom: 2em;
+    }
+
+}
+
+@media(max-width: 480px)  {
+
+    .navbar-container .links {
+        display: none;
+    }
+
+    .navbar-container .burger-menu {
+        display: block;
+    }
+
+    .dropdown-menu {
+        display: block;
+    }
+
+    section {
+        height: fit-content;
+        margin: 0 5%;
+    }
+
+    .project-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .project-title {
+        margin-bottom: 2em;
+    }
+
+    .project-title h2 {
+        margin-bottom: 1em;
+    }
+
+    .project-stat {
+        height: fit-content;
+    }
+
+    .ideas-proc {
+        flex-wrap: wrap;
+    }
+
+    .ideas-text-img {
+        flex-wrap: wrap;
+        gap: 1em;
+    }
+
+    .ideas-wframes {
+        flex-wrap: wrap;
+    }
+
+    .img2-cont {
+        flex-wrap: wrap;
+        gap: 0.5em;
+    }
+    
+    .mockup-screens {
+        flex-direction: column;
+        gap: 1em;
+        height: 100%;
+    }
+
+    #link_proj {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #link_proj li {
+        font-size: large;
+    }
+
+    #link_proj h2 {
+        font-size: larger;
+        margin-bottom: 2em;
+    }
 }
